# dds_project

./: .gitignore  .pdm-python  README.md  pyproject.toml
dds_project/dds/: admin.py  autocomplete_views.py  filters.py  forms.py  models.py  responses.py  serializers.py  urls.py  views.py
dds_project/dds/management/commands/: initial.py
dds_project/dds_project/: settings.py  urls.py
